syntax = "proto3";

package domain;

option go_package = "./domain";

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

message BankAccount {
  string holder = 1;
  string iban = 2;
}

message BillingAddress {
  option (buf.validate.message).cel = {
    id: "BillingAddress.CountryLength",
    message: "Country size must be 2",
    expression:
      "!(size(this.country) == 2)"
      "? 'Country must be 2 letters long eg. DE'"
      ": ''"
  };
  option (buf.validate.message).cel = {
    id: "BillingAddress.streetOrPostOfficeBox",
    message: "Either street or postOfficeBox must be set, but not both",
    expression:
      "has(this.street) == has(this.postOfficeBox)"
      "? 'Either street or postOfficeBox must be set, but not both'"
      ": ''"
  };
  option (buf.validate.message).cel = {
    id: "BillingAddress.StreetAndHouseNumber",
    message: "Both street and houseNumber must be set",
    expression:
      "has(this.street) != has(this.houseNumber)"
      "? 'Both street and houseNumber must be set if it is not a postOfficeBox'"
      ": ''"
  };
  string city = 1;
  string country = 2;
  optional string houseNumber = 3;
  string zip = 4;
  optional string postOfficeBox = 5;
  optional string street = 6;
}
